@@ -1,7 +1,7 @@
 Package: Rmpfr
 Title: R MPFR - Multiple Precision Floating-Point Reliable
 Version: 0.8-3
-Date: 2021-03-09
+Date: 2021-03-20
 DateNote: Previous CRAN version 0.8-2 on 2020-11-10
 Type: Package
 Authors@R: c(person("Martin","Maechler", role = c("aut","cre"),
